--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="group_a_fill">#7710e0</color>
-    <color name="group_b_fill">#7ed321</color>
-    <color name="group_c_fill">#ff3a52</color>
-    <color name="group_d_fill">#ff6f00</color>
-    <color name="group_e_fill">#00adff</color>
+    <color name="group_a_fill">#997710e0</color>
+    <color name="group_b_fill">#997ed321</color>
+    <color name="group_c_fill">#99ff3a52</color>
+    <color name="group_d_fill">#99ff6f00</color>
+    <color name="group_e_fill">#9900adff</color>
 </resources>
